Canviat titol de columnes. Per fer: Fixar amplada de columnes

--- a/app/src/main/res/layout/fragment_quatre.xml
+++ b/app/src/main/res/layout/fragment_quatre.xml
@@ -16,34 +16,37 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="A"
+                android:text="PLENA1(A)"
                 android:layout_column="0"
                 android:background="@android:color/darker_gray"
-                android:padding="5dp" />
+                android:padding="5dp"
+                android:singleLine="true" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="B"
+                android:text="BUIDA1(B)"
                 android:layout_column="1"
                 android:background="@android:color/darker_gray"
                 android:padding="5dp"
-                android:layout_span="1" />
+                android:layout_span="1"
+                android:singleLine="true" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="C"
+                android:text="PLENA2(C)"
                 android:layout_column="2"
                 android:background="@android:color/darker_gray"
                 android:padding="5dp"
-                android:layout_span="1" />
+                android:layout_span="1"
+                android:singleLine="true" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="D"
+                android:text="BUIDA2(D)"
                 android:layout_column="3"
                 android:background="@android:color/darker_gray"
                 android:padding="5dp"
-                />
+                android:singleLine="true" />
 
         </TableRow>
         <TableRow
